[package]
name = "eventful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "nsq"
path = "examples/nsq/main.rs"

[dependencies]
async-trait = "0.1.66"
aws-config = "0.54.1"
aws-sdk-sqs = "0.24.0"
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.94"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-nsq = "0.14.0"
hyperactive = {path = "../hyperactive"}

[dev-dependencies]
rand = "0.8.5"

